# GenieSearch

./: .env.sample  README.md  main.py  pyproject copy.toml  pyproject.toml
app/: chain.py  ingest.py  search.py  server.py  test.py
notebooks/: task-decomposition.ipynb
